--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="poster_base_url">http://image.tmdb.org/t/p/</string>
 
     <!-- Text for an empty adapter -->
-    <string name="no_movies_found">No movies have been found \n or the network is not connected...</string>
+    <string name="no_movies_found">No movies have been found \n or \nthe network is not connected...</string>
 
     <!-- Key name for temperature unit preference -->
     <string name="pref_sorting_key">sorting</string>
