--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="pref_sorting_popularity">movie/popular</string>
     <string name="pref_sorting_rating">movie/top_rated</string>
     <string name="movie_key">movieItem</string>
+    <string name="movie_title_header">Movie Title</string>
+    <string name="movie_rating_header">Rating</string>
+    <string name="movie_release_header">Release Date</string>
+    <string name="title_activity_settings">Settings Activity</string>
+    <string name="title_activity_movie_details">Movie Details</string>
 </resources>
