--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="movie_release_header">Release Date</string>
     <string name="title_activity_settings">Settings Activity</string>
     <string name="title_activity_movie_details">Movie Details</string>
+    <string name="settings_fragment_tag">Settings Fragment</string>
 </resources>
