Feature: Add favorite option
A base implementation of the favorite option and database integration
is now present in the app. Content Providers next.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
     <!-- Fragment Tags -->
     <string name="settings_fragment_tag">Settings Fragment</string>
 
+    <!-- Button Names -->
+    <string name="b_refresh">Refresh</string>
+    <string name="b_favorite">Favorite</string>
+
 </resources>
