Feature: Addition of Content Provider
The content provider has a basic implementation within the code, allowing for
the use of CRUD SQL commands. This is a progress commit where the CRUD
methods and areas in the code where those methods have been used have been
updated, along with the base functionality of MovieDetailActivity and the favorite button.

Future commits will contain a CursorLoader and perhaps completely removing old Movie
object implementation unless both can run together.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,8 @@
     <string name="settings_fragment_tag">Settings Fragment</string>
 
     <!-- Button Names -->
-    <string name="b_refresh">Refresh</string>
-    <string name="b_favorite">Favorite</string>
+    <string name="btn_refresh">Refresh</string>
+    <string name="btn_favorite_true">Favorite</string>
+    <string name="btn_favorite_false">Unfavorite</string>
 
 </resources>
