--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,51 +1,64 @@
 <resources>
+
+    <!-- Application Name -->
     <string name="app_name">Movie Project One</string>
 
-
+    <!-- Settings Fragment Name -->
     <string name="action_settings">Settings</string>
 
+    <!-- Settings Fragment Tags -->
+    <string name="settings_fragment_tag">Settings Fragment</string>
+
     <!-- Portions of the API url request -->
-    <string name="poster_size">w185</string>
-    <string name="poster_base_url">http://image.tmdb.org/t/p/</string>
+    <string name="poster_size" translatable="false">w185</string>
+    <string name="poster_base_url" translatable="false">http://image.tmdb.org/t/p/</string>
 
-    <!-- Text for an empty adapter of popularity and rating -->
-    <string name="no_movies_found">No movies have been found \n or \n the network is not connected…</string>
+    <!-- Key values -->
+    <string name="movie_key" translatable="false">movieItem</string>
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_last_notification" translatable="false">last_notification</string>
 
-    <!-- Text for an empty adapter of favorites -->
-    <string name="no_movies_favorited">No movies have been favorited. \n Add some then come back!</string>
+    <!-- SharedPreferences Sorting Method -->
 
-    <!-- Key name for temperature unit preference -->
-    <string name="pref_sorting_key">sorting</string>
-
-    <!-- Sorting label for the sorting method preference -->
+    <!-- Sorting label header for the sorting method preference -->
     <string name="pref_sorting_label">Sorting Method</string>
 
-    <!-- Labels for sorting method preference -->
+    <!-- Values in SharedPreferences for Labels for sorting method preference -->
     <string name="pref_sorting_label_popularity">Popular</string>
     <string name="pref_sorting_label_rating">Top Rated</string>
     <string name="pref_sorting_label_favorites">Favorites</string>
 
     <!-- Values in SharedPreferences for popularity, top rated and favorites sorting options -->
-    <string name="pref_sorting_popularity">movie/popular</string>
-    <string name="pref_sorting_rating">movie/top_rated</string>
-    <string name="pref_sorting_favorites">movie/</string>
+    <string name="pref_sorting_popularity" translatable="false">movie/popular</string>
+    <string name="pref_sorting_rating" translatable="false">movie/top_rated</string>
+    <string name="pref_sorting_favorites" translatable="false">movie/</string>
 
-    <!-- Values for view Labels [Activity names, headers] -->
+    <!-- SharedPreferences Notification Preference -->
+
+    <!-- Notification label header for the notification preference -->
+    <string name="pref_enable_notification_label">Movie Notifications</string>
+
+    <!-- Values in SharedPreferences for labels of notification preference -->
+    <string name="pref_enable_notification_true">Enabled</string>
+    <string name="pref_enable_notification_false">Not Enabled</string>
+
+    <!-- Detail Activity Headers -->
     <string name="movie_title_header">Movie Title</string>
     <string name="movie_rating_header">Rating</string>
     <string name="movie_release_header">Release Date</string>
     <string name="title_activity_settings">Settings Activity</string>
     <string name="title_activity_movie_details">Movie Details</string>
 
-    <!-- Key values -->
-    <string name="movie_key">movieItem</string>
-
-    <!-- Fragment Tags -->
-    <string name="settings_fragment_tag">Settings Fragment</string>
-
-    <!-- Button Names -->
+    <!-- Detail Activity Button Names -->
     <string name="btn_refresh">Refresh</string>
     <string name="btn_favorite_true">Favorite</string>
     <string name="btn_favorite_false">Unfavorite</string>
+
+    <!-- Detail Activity empty adapter for Popular and Top Rated movies -->
+    <string name="no_movies_found">No movies have been found \n or \n the network is not connected…</string>
+
+    <!-- Detail Activity empty adapter for Favorite movies -->
+    <string name="no_movies_favorited">No movies have been favorited. \n Add some then come back!</string>
+    <string name="notification_text">TMDb Movies have been updated.</string>
 
 </resources>
