--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,16 +18,15 @@
     <!-- Text for an empty adapter of favorites -->
     <string name="no_movies_favorited">No movies have been favorited. \n Add some then come back!</string>
 
-    <!-- Key name for sorting preference -->
-    <string name="pref_sorting_key" translate="false" >sorting</string>
-
     <!-- Key values -->
+    <string name="pref_sorting_key" translate="false" >sorting</string>
     <string name="movie_key" translate="false" >movieItem</string>
+    <string name="mdi_key">mdi</string>
 
-    <!-- Sorting label for the sorting method preference -->
+    <!-- Sorting header for the sorting method preference -->
     <string name="pref_sorting_label">Sorting Method</string>
 
-    <!-- Labels for sorting method preference -->
+    <!-- Labels for sorting method preferences -->
     <string name="pref_sorting_label_popularity">Popular</string>
     <string name="pref_sorting_label_rating">Top Rated</string>
     <string name="pref_sorting_label_favorites">Favorites</string>
